# OptimizedCudaGemm

./: .gitignore  CMakeLists.txt  README.md  setup.py
benchmarks/: benchmark.py  generate_chart.py
include/: common.h
ncu_scripts/: profile.sh
src/: bindings.cpp  naive_gemm.cu  register_blocked_gemm.cu  tiled_gemm.cu  transpose.cu  warp_gemm.cu
tests/: test_kernels.py
